[tool.poetry]
name = "laniakia"
version = "0.1.0"
description = ""
authors = ["author <author@author.com>"]

[tool.poetry.dependencies]
python = "~3.8.5"
laniakea = {url = "https://github.com/pujo-j/laniakea/releases/download/0.2.2/laniakea-0.2.2.tar"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
